fixed background subtraction

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ test_MED_CTD/metadata_output/output_analysis_parameters.txt
 *.eps
 *.nd
 test_empty/metadata_output/output_analysis_parameters.txt
+*.txt
